--- a/PTCGApp/ptcgapp.client/src/App.css
+++ b/PTCGApp/ptcgapp.client/src/App.css
@@ -1,11 +1,14 @@
-﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+﻿
+#root {
+    /*max-width: 1280px;*/
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 
+/*
 th, td {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+*/
