--- a/PTCGApp/ptcgapp.client/src/index.css
+++ b/PTCGApp/ptcgapp.client/src/index.css
@@ -1,3 +1,4 @@
+/*
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -21,20 +22,22 @@ a {
 a:hover {
   color: #535bf2;
 }
+    */
 
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+/*
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -66,3 +69,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
